--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.shoppi.app.ui.HomeFragment"
+        android:name="com.shoppi.app.ui.home.HomeFragment"
         android:label="HomeFragment" >
         <action
             android:id="@+id/action_home_to_product_detail"
@@ -14,7 +14,7 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_category"
-        android:name="com.shoppi.app.ui.CategoryFragment"
+        android:name="com.shoppi.app.ui.category.CategoryFragment"
         android:label="CategoryFragment" />
     <fragment
         android:id="@+id/navigation_cart"
